# polyresearch

./: .gitignore  POLYRESEARCH.md  PREPARE.md  PROGRAM.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
cli/: Cargo.toml  README.md
cli/prompts/: bootstrap-setup.md  contribute-workflow.md  experiment.md  lead-workflow.md  template-prepare.md  template-program.md  thesis-generation.md
cli/src/: agent.rs  cli.rs  comments.rs  config.rs  cycle_guard.rs  editable_surface.rs  github.rs  github_debug.rs  hardware.rs  ledger.rs  lib.rs  main.rs  preflight.rs  state.rs  throttle.rs  validation.rs  worker.rs
cli/src/commands/: admin.rs  annotate.rs  attempt.rs  audit.rs  batch_claim.rs  bootstrap.rs  claim.rs  commit.rs  contribute.rs  decide.rs  duties.rs  generate.rs  guards.rs  init.rs  lead.rs  mod.rs  pace.rs  policy_check.rs  prune.rs  release.rs  resume.rs  review.rs  review_claim.rs  status.rs  submit.rs  sync.rs
cli/src/tui/: app.rs  mod.rs  views.rs
cli/tests/: e2e.rs  mock_agent.sh  scenario_mock.rs  scenarios.rs
cli/tests/fixtures/: acknowledged_invalid_issue.json  attempt_after_closure_issue.json  claimed_no_attempts_issue.json  closed_improved_thesis_issue.json  duplicate_attempt_branch_issue.json  duplicate_claim_issue.json  exhausted_thesis_issue.json  improved_no_submit_issue.json  maintainer_approve_issue.json  maintainer_reject_issue.json  non_lead_decision_pr.json  poisoned_baseline_issue.json  released_with_attempt_issue.json  submit_reject_loop_issue.json
examples/corewar/: POLYRESEARCH.md  PREPARE.md  PROGRAM.md  README.md  results.tsv  warrior.red
examples/eslint/: PREPARE.md  PROGRAM.md  README.md  results.tsv
examples/jailbreakbench-defense/: POLYRESEARCH.md  PREPARE.md  PROGRAM.md  README.md  requirements.txt  results.tsv  system_prompt.md
launch/: bookface.md  linkedin.md  x-thread.md
specs/: cli-v2.md
(+30 files in other folders)
