[package]
name = "polyresearch-cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/superagent-ai/polyresearch"

[[bin]]
name = "polyresearch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
globset = "0.4.18"
octocrab = "0.49.7"
rand = "0.10.1"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
