[package]
name = "polyresearch"
version = "0.5.2"
edition = "2024"
description = "Distributed autoresearch across multiple machines and contributors"
license = "MIT"
repository = "https://github.com/superagent-ai/polyresearch"
homepage = "https://github.com/superagent-ai/polyresearch"
keywords = ["ai", "research", "distributed", "agents", "experiments"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "polyresearch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dialoguer = "0.12.0"
globset = "0.4.18"
octocrab = "0.49.7"
rand = "0.10.1"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sysinfo = "0.32"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
